deployments/workloads/fileshare/fileshare-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fileshare-deployment
  labels:
    app: fileshare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fileshare
  template:
    metadata:
      labels:
        app: fileshare
    spec:
      containers:
        - name: fileshare
          image: stonith404/pingvin-share
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "3000Mi"
              cpu: "3000m"
            requests:
              memory: "500Mi"
              cpu: "500m"
          volumeMounts:
            - name: fileshare
              mountPath: /opt/app/backend/data
      volumes:
        - name: fileshare
          nfs:
            server: 10.10.10.146
            path: /mnt/bigdata/kubernetes/fileshare
            readOnly: false
