deployments/workloads/fileshare/fileshare-tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fileshare-tls
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: share.nilsherzig.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fileshare-service
                port:
                  number: 80
  tls:
    - hosts:
        - share.nilsherzig.com
      secretName: tls-share-cert
