deployments/workloads/fileshare/fileshare-cilium.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "fileshare"
spec:
  endpointSelector:
    matchLabels:
      app: fileshare
  egress:
    - toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchName: "github.com"
              - matchPattern: "github.com"

        - ports:
            - port: "443"
              protocol: TCP
          rules:
            http:
              - host: "github.com"
                path: "/login/oauth/*"
  ingress:
    - toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
